Style scrollbar, fix .card-img-top, add .below-static

--- a/src/main/resources/static/css/styles.scss
+++ b/src/main/resources/static/css/styles.scss
@@ -11,6 +11,25 @@ body {
   scroll-behavior: smooth;
 }
 
+html, body {
+  ::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+    border-radius: 10px;
+    background-color: rgba(18, 45, 94, 0.8);
+  }
+
+  ::-webkit-scrollbar {
+    width: 12px;
+    background-color: rgba(18, 45, 94, 0.8);
+  }
+
+  ::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+    background-color: #57728e;
+  }
+}
+
 hr.white {
   border-color: #ffffff3d;
 }
@@ -34,6 +53,10 @@ hr.white {
   align-items: center;
   justify-content: center;
   color: white;
+
+  > .container-fluid {
+    max-width: 800px;
+  }
 }
 
 .parallax::after {
@@ -135,6 +158,18 @@ h6 { font-size: calc(0.5vw + 10px); }
 }
 .wide {
   width: 100%;
+}
+.below-static {
+  margin-bottom: 25vh;
+  @media only screen and (min-height: 401px) {
+    margin-top: 50vh;
+  }
+  @media only screen and (max-height: 400px) {
+    margin-top: 75vh;
+  }
+  @media only screen and (max-height: 350px) {
+    margin-top: 100vh;
+  }
 }
 
 /* LINKS */
@@ -268,6 +303,10 @@ a:hover {
   z-index: 1010;
   .card-title {
     font-weight: bold;
+  }
+  .card-img-top {
+    width: 75%;
+    margin: 10px auto auto;
   }
 }
 
@@ -433,4 +472,3 @@ a:hover {
   from {opacity: 0;}
   to {opacity: 1;}
 }
-
